Legend
------
+  Addition
-  Removal
*  Alteration/other
!  Alteration/other that changes an interface

Changes
-------
* Made Asteroids example use the CD drive better
* Fixed a bug in which OnControlRemoved/OnControlAdded could be fired before
  the control was actually removed from its parent's control array. This was
  almost never a real problem, but it could cause an exception if multiple
  modal windows were opened.
* Added the Control.DrawSurface property
* Whoops -- the audio quality in the Audio example was set to low. Changed
  it back to the default.
+ Added a property to FormBase that gets which button was clicked on a form
+ Added a simple color picker dialog
* Made Button control only depress when clicked with the left mouse button
+ Added a property to the ButtonBase control that controlled whether or not
  it would automatically update the Pressed property
+ Added a property to the Button control that controlled whether or not it
  can draw pressed even when the mouse was not over the button
+ Added BorderColor properties to the FormBase and LabelBase controls
+ Added low-level support for OpenGL 1.2 and 1.3
! Removed some overloads of low-level OpenGL functions that are not likely to be used
+ Added some more overloads for OpenGL 1.1 functions
! Changed some of the overloads for OpenGL.TexImage2D
  (eg, removed the 'target' parameter)
+ Started on a wrapper for a 2D OpenGL texture
+ Added a 2D Rectangle class
* Fixed some bugs in the 2D Polygon class, added some basic intersection tests
+ Added a 32 and 64 bit fixed-point math classes

2004.02.07 (beta)
-----------------
* First public release